--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="count_string">count</string>
     <string name="default_count">0</string>
     <string name="hello_title">Hello!\n%1$s</string>
+    <string name="take_photo">take photo</string>
 </resources>
